# powerfmt

./: .clippy.toml  CHANGELOG.md  Cargo.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: build.yaml  powerset.yaml
powerfmt/: Cargo.toml
powerfmt-macros/: Cargo.toml
powerfmt-macros/src/: lib.rs
powerfmt-macros/src/smart_display/: delegate.rs  private_metadata.rs
powerfmt/src/: buf.rs  smart_display.rs  smart_display_impls.rs
