[package]
name = "powerfmt-macros"
version = "0.1.0"
authors = ["Jacob Pratt <jacob@jhpratt.dev>"]
edition = "2021"
rust-version = "1.65.0"
repository = "https://github.com/jhpratt/powerfmt"
keywords = ["display", "format", "fmt", "formatter", "extension"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
    Procedural macros for `powerfmt`.
    This crate is an implementation detail and should not be relied upon directly.
"""

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
